wxapp init
